# libnxml

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac  doxy.conf.in  nxml.pc.in
doc/: Makefile.am  main.doxy
src/: Makefile.am  nxml.h.in  nxml_download.c  nxml_easy.c  nxml_edit.c  nxml_error.c  nxml_free.c  nxml_init.c  nxml_internal.h  nxml_namespace.c  nxml_parser.c  nxml_string.c  nxml_tools.c  nxml_utf.c  nxml_write.c
test/: Makefile.am  easy.c  namespace.c  new.c  parser.c  test_base.c  write.c
